--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
    "name": "firegento/germansetup",
+   "license": ["GPL-3.0"],
    "version": "dev-composer",
    "type": "magento-module",
    "minimum-stability": "dev",
