--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
    "name": "firegento/germansetup",
    "license": ["GPL-3.0"],
-   "version": "dev-composer",
+   "version": "dev-master",
    "type": "magento-module",
    "minimum-stability": "dev",
    "require": {
