--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,15 @@ language: php
 php:
   - 5.3
 before_install:
+  - mkdir bin/
   - mkdir test/
 before_script:
   - CURR_DIR=$(pwd)
-  - bin/mage-ci install test 1.7.0.2 magento_test -c -t -r http://mage-ci.ecomdev.org
-  - bin/mage-ci install-module test $CURR_DIR
+  - wget https://raw.github.com/EcomDev/MageCI/master/bin/mage-ci
+  - chmod ./mage-ci
+  - ./mage-ci install test 1.7.0.2 magento_test -c -t -r http://mage-ci.ecomdev.org
+  - ./mage-ci install-module test $CURR_DIR
   - git clone https://github.com/EcomDev/EcomDev_PHPUnit.git ./phpunit/
-  - bin/mage-ci install-module $CURR_DIR/test $CURR_DIR/phpunit/
+  - ./mage-ci install-module $CURR_DIR/test $CURR_DIR/phpunit/
 script:
-  - bin/mage-ci phpunit test
+  - ./mage-ci phpunit test
