--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,8 @@
         "type": "composer",
         "url": "http://packages.firegento.com"
       }
-    ]
+    ],
+    "extra":{
+      "magento-root-dir": "test/"
+    }
 }
