--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
       "magento-hackathon/magento-composer-installer": "1.2"
    },
     "require-dev": {
-      "ecomdev/mage-ci": "master-dev"
+      "ecomdev/mage-ci": "master-dev",
+      "magento-hackathon/magento-behat-extension": "master-dev"
    },
     "config": {
         "bin-dir": "bin"
