--- a/composer.json
+++ b/composer.json
@@ -1,26 +1,25 @@
 {
-   "name": "firegento/magesetup",
-   "license": ["GPL-3.0"],
-   "type": "magento-module",
-   "description": "MageSetup ist eine deutlich verbesserte Alternative zu bereits existierenden Modulen.",
-   "homepage": "https://github.com/firegento/firegento-magesetup",
-   "require": {
-      "magento-hackathon/magento-composer-installer": "1.2"
-   },
-    "require-dev": {
-      "ecomdev/mage-ci": "master-dev",
-      "magento-hackathon/magento-behat-extension": "dev-master"
-   },
-    "config": {
-        "bin-dir": "bin"
-   },
-    "repositories": [
-      {
-        "type": "composer",
-        "url": "http://packages.firegento.com"
-      }
-    ],
-    "extra":{
-      "magento-root-dir": "test/"
+  "name": "firegento/magesetup",
+  "license": ["GPL-3.0"],
+  "type": "magento-module",
+  "description": "MageSetup ist eine deutlich verbesserte Alternative zu bereits existierenden Modulen.",
+  "homepage": "https://github.com/firegento/firegento-magesetup",
+  "require": {
+    "magento-hackathon/magento-composer-installer": "1.2"
+  },
+  "require-dev": {
+    "ecomdev/mage-ci": "master-dev"
+  },
+  "config": {
+    "bin-dir": "bin"
+  },
+  "repositories": [
+    {
+      "type": "composer",
+      "url": "http://packages.firegento.com"
     }
+  ],
+  "extra":{
+    "magento-root-dir": "test/"
+  }
 }
