--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "firegento/magesetup",
   "license": ["GPL-3.0"],
   "type": "magento-module",
-  "description": "MageSetup ist eine deutlich verbesserte Alternative zu bereits existierenden Modulen.",
+  "description": "MageSetup configures a shop for a national market. It creates configuration and tax settings, email templates, cms blocks and pages.",
   "homepage": "https://github.com/firegento/firegento-magesetup",
   "require": {
     "magento-hackathon/magento-composer-installer": "1.2"
