--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,10 @@ php:
   - 5.3
 before_install:
   - mkdir test/
-  - composer self-update
-  - composer install --dev
+  - curl -sS https://getcomposer.org/installer | php
+  - chmod +x ./composer.phar
+  - ./composer.phar --version
+  - ./composer.phar install --dev
 before_script:
   - CURR_DIR=$(pwd)
   - bin/mage-ci install test 1.7.0.2 magento_test -c -t -r http://mage-ci.ecomdev.org
