--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "magento-hackathon/magento-composer-installer": "*"
     },
     "require-dev": {
+        "phpunit/phpunit": "3.7.*@dev",
         "firegento/mage-ci": "master-dev"
     },
     "config": {
