added polish language

--- a/composer.json
+++ b/composer.json
@@ -90,6 +90,11 @@
                 {
                     "type": "magelocale",
                     "structure": "dir",
+                    "path": "pl_PL/template/magesetup"
+                },
+                {
+                    "type": "magelocale",
+                    "structure": "dir",
                     "path": "fr_CH/template/magesetup"
                 },
                 {
