--- a/composer.json
+++ b/composer.json
@@ -143,6 +143,11 @@
                     "path": "frontend/base/default/template/magesetup"
                 },
                 {
+                    "type": "magedesign",
+                    "structure": "dir",
+                    "path": "frontend/rwd/default/template/magesetup"
+                },
+                {
                     "type": "mageskin",
                     "structure": "dir",
                     "path": "frontend/base/default/css/magesetup"
