[+BUGFIX] Removed duplicate tax info on product view pages

--- a/composer.json
+++ b/composer.json
@@ -151,6 +151,11 @@
                     "type": "mageskin",
                     "structure": "dir",
                     "path": "frontend/base/default/css/magesetup"
+                },
+                {
+                    "type": "mageskin",
+                    "structure": "dir",
+                    "path": "frontend/rwd/default/css/magesetup"
                 }
             ]
         }
