--- a/.travis.yml
+++ b/.travis.yml
@@ -1,37 +1,54 @@
 language: php
+sudo: false
 
 php:
+  - 5.3
   - 5.4
   - 5.5
+  - 5.6
+  - 7.0
+  - hhvm
 
 env:
-  - MAGENTO_VERSION="1.6.2.0"
-  - MAGENTO_VERSION="1.7.0.2"
-  - MAGENTO_VERSION="1.8.1.0"
-  - MAGENTO_VERSION="1.9.0.1"
-  - MAGENTO_VERSION="1.9.1.0"
+  - MAGENTO_VERSION="magento-mirror-1.6.2.0"
+  - MAGENTO_VERSION="magento-mirror-1.7.0.2"
+  - MAGENTO_VERSION="magento-mirror-1.8.1.0"
+  - MAGENTO_VERSION="magento-mirror-1.9.0.1"
+  - MAGENTO_VERSION="magento-mirror-1.9.1.1"
+  - MAGENTO_VERSION="magento-mirror-1.9.2.1"
+  - MAGENTO_VERSION="magento-mirror-1.9.2.2"
 
 matrix:
   fast_finish: true
+  allow_failures:
+    - php: 5.6
+    - php: 7.0
+    - php: hhvm
   exclude:
+    # Newer Magento versions uses newer PHP versions
+    - php: 5.3
+      env: MAGENTO_VERSION="magento-mirror-1.9.0.1"
+
+    - php: 5.3
+      env: MAGENTO_VERSION="magento-mirror-1.9.1.1"
+
+    - php: 5.3
+      env: MAGENTO_VERSION="magento-mirror-1.9.2.1"
+
+    - php: 5.3
+      env: MAGENTO_VERSION="magento-mirror-1.9.2.2"
+
+    # Old Magento Versions are not officially supported to run with PHP 5.5
     - php: 5.5
-      env: MAGENTO_VERSION="1.6.2.0"
+      env: MAGENTO_VERSION="magento-mirror-1.6.2.0"
     - php: 5.5
-      env: MAGENTO_VERSION="1.7.0.2"
-
-before_install:
-  - mkdir test/
-  - travis_retry composer self-update
-
-install:
-  - travis_retry composer install --prefer-source --no-interaction --ignore-platform-reqs
-
-before_script:
-  - CURR_DIR=$(pwd)
-  - bin/mage-ci install test ${MAGENTO_VERSION} magento_test -c -t -r http://mage-ci.firegento.com
-  - bin/mage-ci install-module test $CURR_DIR
-  - git clone https://github.com/EcomDev/EcomDev_PHPUnit.git ./phpunit/
-  - bin/mage-ci install-module $CURR_DIR/test $CURR_DIR/phpunit/
+      env: MAGENTO_VERSION="magento-mirror-1.7.0.2"
 
 script:
-  - bin/mage-ci phpunit test
+  - curl --retry 2 --retry-delay 5 -f -sSL https://raw.githubusercontent.com/AOEpeople/MageTestStand/master/setup.sh | bash
+
+notifications:
+  email:
+    recipients:
+      - mail@simonsprankel.de
+    on_failure: always
