travis config for latest magento versions

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,11 @@ env:
   - MAGENTO_VERSION="magento-mirror-1.9.0.1"
   - MAGENTO_VERSION="magento-mirror-1.9.1.1"
   - MAGENTO_VERSION="magento-mirror-1.9.2.1"
-  - MAGENTO_VERSION="magento-mirror-1.9.2.2"
+  - MAGENTO_VERSION="magento-mirror-1.9.2.3"
+  - MAGENTO_VERSION="magento-mirror-1.9.2.4"
+  - MAGENTO_VERSION="magento-mirror-1.9.3.0"
+  - MAGENTO_VERSION="magento-mirror-1.9.3.1"
+  - MAGENTO_VERSION="magento-mirror-1.9.3.2"
 
 matrix:
   fast_finish: true
@@ -37,6 +41,21 @@ matrix:
 
     - php: 5.3
       env: MAGENTO_VERSION="magento-mirror-1.9.2.2"
+
+    - php: 5.3
+      env: MAGENTO_VERSION="magento-mirror-1.9.2.3"
+
+    - php: 5.3
+      env: MAGENTO_VERSION="magento-mirror-1.9.2.4"
+
+    - php: 5.3
+      env: MAGENTO_VERSION="magento-mirror-1.9.3.0"
+
+    - php: 5.3
+      env: MAGENTO_VERSION="magento-mirror-1.9.3.1"
+
+    - php: 5.3
+      env: MAGENTO_VERSION="magento-mirror-1.9.3.2"
 
     # Old Magento Versions are not officially supported to run with PHP 5.5
     - php: 5.5
