Add @riconeitzel as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -27,6 +27,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "riconeitzel",
+      "name": "Rico Neitzel",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/930706?v=4",
+      "profile": "http://www.riconeitzel.de/",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
