Add @cphilipp as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -81,6 +81,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "cphilipp",
+      "name": "Christian Philipp",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/2188398?v=4",
+      "profile": "https://github.com/cphilipp",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
