--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -99,6 +99,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "winkelsdorf",
+      "name": "Frederik Winkelsdorf",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/1413291?v=4",
+      "profile": "https://github.com/winkelsdorf",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
