Add @jwittorf as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -108,6 +108,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "jwittorf",
+      "name": "Julian",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/2085721?v=4",
+      "profile": "https://twitter.com/sirawesome_",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
