--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -117,6 +117,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "grossmann",
+      "name": "Martin Grossmann",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/1866724?v=4",
+      "profile": "http://www.multichannelsystems.com/",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
