--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -190,6 +190,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "skrollme",
+      "name": "Sebastian K",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/1336659?v=4",
+      "profile": "https://github.com/skrollme",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
