--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -208,6 +208,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "renepenner",
+      "name": "René Penner",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/98465?v=4",
+      "profile": "https://wambo-agency.com/",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
