--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -235,6 +235,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "matiaso",
+      "name": "Matias Orlando",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/261406?v=4",
+      "profile": "http://www.magento-saigon.com/",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
