Add @mam08ixo as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -244,6 +244,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "mam08ixo",
+      "name": "Christoph Aßmann",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/1771622?v=4",
+      "profile": "https://github.com/mam08ixo",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
