--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -280,6 +280,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "easyMaxi",
+      "name": "easyMaxi",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/965733?v=4",
+      "profile": "https://github.com/easyMaxi",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
