Add @ckressibucherTIM as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -334,6 +334,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "ckressibucherTIM",
+      "name": "ckressibucherTIM",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/3985914?v=4",
+      "profile": "https://github.com/ckressibucherTIM",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
