Add @mklooss as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -54,6 +54,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "mklooss",
+      "name": "Mathis Klooß",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/710748?v=4",
+      "profile": "http://www.mage-profis.de/",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
