--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -180,6 +180,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "tkn98",
+      "name": "Tom Klingenberg",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/10513307?v=4",
+      "profile": "https://github.com/tkn98",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
