--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -198,6 +198,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "rengaw83",
+      "name": "Michael Wagner",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/5131653?v=4",
+      "profile": "http://solidbox.de/",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
