Add @klein0r as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -252,6 +252,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "klein0r",
+      "name": "Matthias Kleine",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/1959049?v=4",
+      "profile": "https://mkleine.de/",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
