Add @daniel-rose as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -297,6 +297,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "daniel-rose",
+      "name": "Daniel Rose",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/489806?v=4",
+      "profile": "https://www.xing.com/profile/Daniel_Rose16",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
