--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -315,6 +315,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "cmuench",
+      "name": "Christian Münch",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/211294?v=4",
+      "profile": "https://muench.dev/",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
