--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -342,6 +342,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "bastianccm",
+      "name": "Bastian",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/1145424?v=4",
+      "profile": "https://github.com/bastianccm",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
