--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -351,6 +351,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "JumpLink",
+      "name": "Pascal Garber",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/1073989?v=4",
+      "profile": "https://www.jumplink.eu/",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
