--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -160,7 +160,8 @@
       "avatar_url": "https://avatars2.githubusercontent.com/u/4435523?v=4",
       "profile": "https://github.com/kkrieger85",
       "contributions": [
-        "code"
+        "code",
+        "doc"
       ]
     },
     {
